Change Log:

**5/18/15**
- Fixed error on import of elite damage % from items
- MfD from Haunt of Vaxo no longer stacks with MfD cast by player or from Calamity

**5/14/15**
- Added Active/Passive uptime for Laws of Valor buff (as with other player IAS buffs, it is only included in calculations if the uptime is 100%; in this case, if the active uptime is 100%, then 15% IAS is added. If the total active+passive uptime is 100%, then 8% IAS is added).

**5/12/15**
- Fixed error that prevented Kridershot+Meticulous Bolts from calculating properly
- Fixed error that was causing Health Globes to not be included in simulation
- Added paragon points, weapon +damage and jewelry +damage to Stat calculator

**5/11/15**
* Reworked special items and sets in user interface (items now selected by slot)
* Removed Odyssey's End uptime. 
-- Instead, if Odyssey's End is equipped and Entangling shot is selected as a skill, the simulation will make sure ES is fired whenever the buff is about to fall off
* Fixed import of Odyssey's End buff percent from profile
* It should now be easier to type values into numeric spinner fields (they will only validate on keypress when exceeding max value, or when enter/leaving focus)

**5/8/15**
- Convention of Elements' damage buff is now discrete for each elemental damage type (as opposed to averaged across all 4 elements). It now cycles through each element every 4 seconds.

**5/7/15**
- Now parses all Legendary gems in Jewelry and displays 3 drop-downs for selecting up to 3 Gems to be used
-- Note: Not all Gem mechanics are implemented (e.g. Mirinae and Wreath of Lightning are still on the to-do list)
- Added Simplicity's Strength legendary gem mechanics
- Added Holy elemental damage type (in preparation for Mirinae gem)

**5/6/15**
- Fixed Wolf Howl/BotP (BotP was triggering Wolf buff; copy & paste error!)
- Updated Damage Log for Elemental Arrow/Ball Lightning to show multiplier (based on target size and Meticulous Bolts %)